--- a/Pro.Assur/Web.config
+++ b/Pro.Assur/Web.config
@@ -14,14 +14,11 @@
 
     <!--<add name="DefaultConnection" connectionString="Data Source=(LocalDb)\MSSQLLocalDB;AttachDbFilename=|DataDirectory|\aspnet-Pro.Assur-20151020035248.mdf;Initial Catalog=aspnet-Pro.Assur-20151020035248;Integrated Security=True" providerName="System.Data.SqlClient" />-->
   </connectionStrings>
-  <appSettings>
-    <add key="FromEmailAddress" value="malusassurfr@gmail.com" />
-    <add key="FromEmailDisplayName" value="Malus-Assur.fr" />
-    <add key="FromEmailPassword" value="" />
-    <add key="SMTPHost" value="smtp@gmail.com" />
+  <appSettings>    
+   
+    <add key="SMTPHost" value="smtp.gmail.com"/>
     <add key="SMTPPort" value="587" />
-    
-    
+       
     <add key="webpages:Version" value="3.0.0.0" />
     <add key="webpages:Enabled" value="false" />
     <add key="ClientValidationEnabled" value="true" />
