--- a/Pro.Assur/Pro.Assur.csproj
+++ b/Pro.Assur/Pro.Assur.csproj
@@ -295,6 +295,7 @@
     <Content Include="Views\Home\Demandes.cshtml" />
     <Content Include="Views\Shared\_PagingPartial.cshtml" />
     <Content Include="images\EmailTemplate.cshtml" />
+    <Content Include="Views\Home\Index2.cshtml" />
   </ItemGroup>
   <ItemGroup>
     <Folder Include="App_Data\" />
